# ledger

./: .gitignore  Cargo.toml  Makefile
base/: Cargo.toml
base/src/: barchart.rs  charset.rs  config.rs  fs.rs  lib.rs  limitkind.rs  limitprinter.rs  limits.rs  record.rs  tree.rs  util.rs
base/src/tree/: forsum.rs  forview.rs
cli/: Cargo.toml
cli/src/: cmds.rs  lib.rs  output.rs  sharedopts.rs  testing.rs  tests.rs  util.rs
cli/src/cmds/: cats.rs  init.rs  lim.rs  log.rs  logt.rs  plot.rs  rm.rs  sum.rs  view.rs
cli/src/testing/: case.rs  resultmatcher.rs  state.rs
lib/: Cargo.toml
lib/src/: aggregate.rs  barchart.rs  category.rs  cents.rs  charset.rs  config.rs  date.rs  datepart.rs  fs.rs  interval.rs  limitkind.rs  limitprinter.rs  limits.rs  record.rs  recordlist.rs  tree.rs  util.rs
lib/src/tree/: forsum.rs  forview.rs
src/: main.rs
src/base/: aggregate.rs  barchart.rs  cents.rs  config.rs  date.rs  fs.rs  interval.rs  limitkind.rs  limitprinter.rs  limits.rs  mod.rs  record.rs  recordlist.rs  tree.rs
src/base/tree/: forlogt.rs  forsum.rs  forview.rs
src/cli/: mod.rs  output.rs  util.rs
src/cli/cmds/: cats.rs  init.rs  lim.rs  log.rs  logt.rs  mod.rs  plot.rs  rm.rs  root.rs  sum.rs  view.rs
src/cli/testing/: case.rs  mod.rs  resultmatcher.rs  state.rs
