[package]
name = "ledger"
version = "1.0.11"
edition = "2024"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1 # Slower compile, faster code
lto = true        # Enable link time optimizations to produce faster code
opt-level = "z"   # Optimize for binary size
panic = "abort"   # Smaller binary size than "unwind"
strip = "symbols" # Remove debug symbols to reduce binary size

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive", "wrap_help"] }
colored = "3"
derive_more = { version = "1.0.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
strum = { version = "0.26.3", features = ["derive"] }
terminal_size = "0.4.3"
thiserror = "2.0.17"
time = { version = "0.3.44", features = [
    "local-offset",
    "macros",
    "serde-human-readable",
] }
wildmatch = "2.5.0"

[dev-dependencies]
indoc = "2.0.6"
rstest = "0.24.0"
tempfile = "3.23.0"
text-diff = "0.4.0"
