[package]
name = "base"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
derive_more = { version = "1.0.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.9"
time = { version = "0.3.37", features = [
    "local-offset",
    "macros",
    "serde-human-readable",
] }

[dev-dependencies]
indoc = "2.0.5"
rstest = "0.24.0"
tempfile = "3.15.0"
