[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.3", features = ["derive", "wrap_help"] }
lib = { path = "../lib" }
strum = "0.24"
terminal_size = "0.2.6"
wildmatch = "2.1.1"

[dev-dependencies]
rstest = "0.17.0"
tempfile = "3.6.0"
