[package]
name = "cli"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
anyhow = "1.0.95"
base = { path = "../base" }
clap = { version = "4.5.23", features = ["derive", "wrap_help"] }
colored = "3"
strum = "0.26.3"
terminal_size = "0.4.1"
wildmatch = "2.4.0"

[dev-dependencies]
indoc = "2.0.5"
rstest = "0.24.0"
tempfile = "3.15.0"
text-diff = "0.4.0"
