[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
derive_more = "0.99.17"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
strum = { version = "0.24", features = ["derive"] }
thiserror = "1.0.40"

[dev-dependencies]
indoc = "2.0.1"
rstest = "0.17.0"
tempfile = "3.6.0"
